--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "description": "do not enbug any more",
     "permissions": [
         "tabs",
-        "*://*/*"
+        "<all_urls>"
     ],
     "browser_action": {
         "default_icon": "icon.png"
